remove unecessary --features from workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Build Python package
         run: |
           uv sync --dev --no-install-package datafusion-ray
-          uv run --no-project maturin build --release --strip --features substrait
+          uv run --no-project maturin build --release --strip
 
       - name: List Windows wheels
         if: matrix.os == 'windows-latest'
@@ -149,7 +149,7 @@ jobs:
       - name: Build Python package
         run: |
           uv sync --dev --no-install-package datafusion
-          uv run --no-project maturin build --release --strip --features substrait
+          uv run --no-project maturin build --release --strip
 
       - name: List Mac wheels
         run: find target/wheels/
@@ -182,7 +182,7 @@ jobs:
           target: x86_64
           manylinux: auto
           rustup-components: rust-std rustfmt # Keep them in one line due to https://github.com/PyO3/maturin-action/issues/153
-          args: --release --manylinux 2014 --features protoc,substrait
+          args: --release --manylinux 2014
       - name: Archive wheels
         uses: actions/upload-artifact@v4
         with:
@@ -212,7 +212,7 @@ jobs:
           # Use manylinux_2_28-cross because the manylinux2014-cross has GCC 4.8.5, which causes the build to fail
           manylinux: 2_28
           rustup-components: rust-std rustfmt # Keep them in one line due to https://github.com/PyO3/maturin-action/issues/153
-          args: --release --features protoc,substrait
+          args: --release
       - name: Archive wheels
         uses: actions/upload-artifact@v4
         with:
@@ -238,7 +238,7 @@ jobs:
           rust-toolchain: stable
           manylinux: auto
           rustup-components: rust-std rustfmt
-          args: --release --sdist --out dist --features protoc,substrait
+          args: --release --sdist --out dist
       - name: Assert sdist build does not generate wheels
         run: |
           if [ "$(ls -A target/wheels)" ]; then
