--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ tonic-build = { version = "0.8", default-features = false, features = [
   "prost",
 ] }
 url = "2"
+protobuf-src = "2.1"
 
 [dev-dependencies]
 tempfile = "3.17"
