--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -173,12 +173,6 @@ jobs:
           name: python-wheel-license
           path: .
 
-      - name: Install Protoc
-        uses: arduino/setup-protoc@v3
-        with:
-          version: "27.4"
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         env:
@@ -189,6 +183,10 @@ jobs:
           manylinux: auto
           rustup-components: rust-std rustfmt # Keep them in one line due to https://github.com/PyO3/maturin-action/issues/153
           args: --release --manylinux 2014
+          before-script-linux: |
+            sudo apt-get update
+            sudo apt-get install protobuf-compiler
+
       - name: Archive wheels
         uses: actions/upload-artifact@v4
         with:
@@ -208,12 +206,6 @@ jobs:
           name: python-wheel-license
           path: .
 
-      - name: Install Protoc
-        uses: arduino/setup-protoc@v3
-        with:
-          version: "27.4"
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         env:
@@ -225,6 +217,10 @@ jobs:
           manylinux: 2_28
           rustup-components: rust-std rustfmt # Keep them in one line due to https://github.com/PyO3/maturin-action/issues/153
           args: --release
+          before-script-linux: |
+            sudo apt-get update
+            sudo apt-get install protobuf-compiler
+
       - name: Archive wheels
         uses: actions/upload-artifact@v4
         with:
@@ -244,12 +240,6 @@ jobs:
           name: python-wheel-license
           path: .
 
-      - name: Install Protoc
-        uses: arduino/setup-protoc@v3
-        with:
-          version: "27.4"
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build sdist
         uses: PyO3/maturin-action@v1
         with:
@@ -257,6 +247,10 @@ jobs:
           manylinux: auto
           rustup-components: rust-std rustfmt
           args: --release --sdist --out dist
+          before-script-linux: |
+            sudo apt-get update
+            sudo apt-get install protobuf-compiler
+
       - name: Assert sdist build does not generate wheels
         run: |
           if [ "$(ls -A target/wheels)" ]; then
