manually download new protoc compiler for manylinux

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -184,7 +184,9 @@ jobs:
           rustup-components: rust-std rustfmt # Keep them in one line due to https://github.com/PyO3/maturin-action/issues/153
           args: --release --manylinux 2014
           before-script-linux: |
-            yum install -y protobuf-compiler
+            yum install -y wget
+            wget https://github.com/protocolbuffers/protobuf/releases/download/v29.3/protoc-29.3-linux-x86_64.zip
+            unzip -o proto*zip
 
       - name: Archive wheels
         uses: actions/upload-artifact@v4
@@ -217,7 +219,9 @@ jobs:
           rustup-components: rust-std rustfmt # Keep them in one line due to https://github.com/PyO3/maturin-action/issues/153
           args: --release
           before-script-linux: |
-            yum install -y protobuf-compiler
+            yum install -y wget
+            wget https://github.com/protocolbuffers/protobuf/releases/download/v29.3/protoc-29.3-linux-x86_64.zip
+            unzip -o proto*zip
 
       - name: Archive wheels
         uses: actions/upload-artifact@v4
@@ -246,7 +250,9 @@ jobs:
           rustup-components: rust-std rustfmt
           args: --release --sdist --out dist
           before-script-linux: |
-            yum install -y protobuf-compiler
+            yum install -y wget
+            wget https://github.com/protocolbuffers/protobuf/releases/download/v29.3/protoc-29.3-linux-x86_64.zip
+            unzip -o proto*zip
 
       - name: Assert sdist build does not generate wheels
         run: |
