comment out windows build as protobuf-src does not build on it at the moment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.13"]
-        os: [macos-latest, windows-latest]
+        #os: [macos-latest, windows-latest]
+        os: [macos-latest]
     steps:
       - uses: actions/checkout@v4
 
