--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,5 +131,5 @@ jobs:
             --concurrency 3 \
             --partitions-per-processor 2 \
             --batch-size=8192 \
-            --worker-pool-min=20 \
+            --processor-pool-min=20 \
             --validate
